Closed Bug 1646171 Opened 5 years ago Closed 5 years ago

Fix vsnprintf complaint in Assertions.cpp

Categories

(Core :: MFBT, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox79 --- fixed

People

(Reporter: away, Assigned: away)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.

For some reason, our clang-plugin didn't notice this before clang 11.

Assignee: nobody → dmajor
Status: NEW → ASSIGNED
Pushed by dmajor@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/dc73e15f6d53 Fix vsnprintf complaint in Assertions.cpp r=froydnj
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: