Bug 1646171 - Fix vsnprintf complaint in Assertions.cpp r=froydnj

For some reason, our clang-plugin didn't notice this before clang 11.

Differential Revision: https://phabricator.services.mozilla.com/D79901